fix image size to avoid layout shift after image is loaded

--- a/public/style.css
+++ b/public/style.css
@@ -17,3 +17,8 @@
 .highlight {
   font-weight: bold;
 }
+
+article img {
+  width: 200px;
+  height: 200px;
+}
